<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.example.android.databaseexample.DisplayContact">
    
    <TextView
        android:id="@+id/textView_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/editText_phone"
        android:layout_alignLeft="@+id/textView_phone"
        android:layout_alignStart="@+id/textView_phone" />
    
    <EditText
        android:id="@+id/editText_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="82dp"
        android:ems="10"
        android:inputType="text" />
    <requestFocus/>

    <TextView
        android:id="@+id/textView_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/phone"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/editText_street"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText_phone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_street"
        android:layout_below="@+id/editText_name"
        android:ems="10"
        android:inputType="phone|text" />

    <TextView
        android:id="@+id/textView_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/street"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/editText_email"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/editText_street"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editText_name"
        android:layout_below="@+id/editText_phone"
        android:ems="10"
        android:inputType="text" />

    <TextView
        android:id="@+id/textView_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/email"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_above="@+id/editText_city"
        android:layout_alignRight="@+id/textView_street"
        android:layout_alignEnd="@+id/textView_street" />

    <EditText
        android:id="@+id/editText_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:layout_below="@+id/editText_street"
        android:layout_alignLeft="@+id/editText_street"
        android:layout_alignStart="@+id/editText_street" />

    <TextView
        android:id="@+id/textView_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/city"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:layout_alignBottom="@+id/editText_city"
        android:layout_alignLeft="@+id/textView_email"
        android:layout_alignStart="@+id/textView_email" />
    
    <EditText
        android:id="@+id/editText_city"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="text"
        android:layout_below="@+id/editText_email"
        android:layout_alignLeft="@+id/editText_email"
        android:layout_alignStart="@+id/editText_email" />

    <Button
        android:id="@+id/button_saveContact"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/save"
        android:layout_below="@+id/textView_city"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="56dp"
        android:onClick="manipulateDatabase" />

</RelativeLayout>
